--- a/main.css
+++ b/main.css
@@ -3,3 +3,85 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body, input, textarea{
+    font-family: "Roboto", sans-serif;
+    background-color: #e6e6e6;
+}
+
+/* Seção "Cabeçalho" */
+
+header{
+    padding: 16px 0;
+    background: linear-gradient(to right, #ee0979, #ff6a00);
+    color: #ecf0f1;
+    margin-bottom: 15px;
+}
+
+header h1, section h2, a{
+    font-family: "Oswald", sans-serif;
+    font-weight: normal;
+}
+
+header nav li{
+    display: inline;
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+header nav li a{
+    color: #ecf0f1;
+    text-decoration: none;
+}
+
+.container{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header img{
+    height: 100px;
+}
+
+/*Seção Articles*/
+
+
+#articles .container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#articles .container img{
+    width: 1240px;
+}
+
+#articles .posts{
+    width: 1280px;
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
+
+#articles span{
+    font-size: 0.8em;
+}
+
+#articles .posts h2{
+    color: #ee0979;
+}
+
+#articles .posts a{
+    text-decoration: none;
+    color: #ee0979;
+}
+
+#articles .posts a:hover{
+    text-decoration: underline;
+}
