--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body, input, textarea{
+body{
     font-family: "Roboto", sans-serif;
     background-color: #e6e6e6;
 }
@@ -16,6 +16,12 @@ header{
     background: linear-gradient(to right, #ee0979, #ff6a00);
     color: #ecf0f1;
     margin-bottom: 15px;
+}
+
+#home{
+    color: #ecf0f1;
+    text-decoration: none;
+    font-size: 2em;
 }
 
 header h1, section h2, a{
@@ -52,6 +58,9 @@ header img{
 
 /*Seção Articles*/
 
+#articles{
+    min-height: 779px;
+}
 
 #articles .container{
     display: flex;
@@ -86,6 +95,68 @@ header img{
     text-decoration: underline;
 }
 
+/*Página Contato*/
+
+#articles .contact-container{
+    display: flex;
+    justify-content: center;
+}
+
+#articles .contact-posts{
+    width: 660px;
+    padding: 20px;
+    background: white;
+    margin-top: 140px;
+}
+
+
+#articles .contact-posts h2{
+    color: #ee0979;
+}
+
+#articles .contact-posts a{
+    text-decoration: none;
+    color: #ee0979;
+}
+
+#articles .contact-posts a:hover{
+    text-decoration: underline;
+}
+
+
+form{
+    margin-top: 20px;
+}
+
+form input,
+form textarea,
+form button{
+    display: block;
+    width: 100%;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form button{
+    background-color: #ee0979;
+    color: #ecf0f1;
+    border: none;
+    cursor: pointer;
+}
+
+input:focus, textarea:focus{
+    outline-color: #ee0979;
+}
+
+form button:hover{
+    background-color: #ff6a00;
+}
+
+form textarea{
+    resize: none;
+    height: 180px;
+}
+
 /*Rodapé*/
 
 footer{
@@ -93,3 +164,5 @@ footer{
     padding: 16px 0;
     color: white;
 }
+
+#contact-footer{}
